# evo-nn

./: CMakeLists.txt  plot.py  plotQ.py  plot_SoftMax.py  plot_cmp.py  plot_nonadaptive.py  plot_prob.py  plot_temp.py  testMultiNightBar.cpp  testMultiNightBarQ.cpp
Agents/: BarAgent.cpp  BarAgent.h
Domains/: MultiNightBar.cpp  MultiNightBar.h  MultiNightBarQ.cpp  MultiNightBarQ.h
Learning/: NeuroEvo.cpp  QLearner.cpp  QLearner.h  QLearning.h
Utilities/: GetMaxIndices.hpp  Utilities.cpp  Utilities.h
include/: CMakeLists.txt
include/Agents/: CMakeLists.txt
include/Domains/: Bar.h  CMakeLists.txt  MultiNightBar.h  MultiNightBarQ.cpp  MultiNightBarQ.h
include/Learning/: CMakeLists.txt  QLearner.cpp  QLearner.h
include/Utilities/: GetMaxIndices.hpp  SortIndices.hpp  Utilities.h
plot/: bar_nonadaptive-11-8.fig  plotAll.m  plot_fixed.m  plot_nonadaptive.m  plot_numLearning.m  plot_temp.m  plot_temp_prob.m
